infra: upgrade releasenotes builder to java 11